manifests/multi-cluster/cluster1/app-service-a.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
  namespace: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - image: cainelli/simple-http-server:1.0.0-dev
        imagePullPolicy: Always
        name: service-a
        resources:
          requests:
            cpu: "64m"
            memory: "32M"
          limits:
            cpu: "64m"
            memory: "32M"
        ports:
        - containerPort: 8000
          name: http
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  name: service-a
  namespace: service-a
spec:
  selector:
    app: service-a
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  8000
