manifests/multi-cluster/cluster1/service-entries.yml
---
# Generated ServiceEntry
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-a
  namespace : service-a
spec:
  hosts:
  - service-a.service-a.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 10.20.0.1
      network: cluster2
      ports:
        http: 8001
    - address: 10.20.0.2
      network: cluster2
      ports:
        http: 8001
    - address: 10.20.0.3
      network: cluster2
      ports:
        http: 8001
---
# Generated ServiceEntry
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-b
  namespace : service-b
spec:
  hosts:
  - service-b.service-b.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 10.20.0.1
      network: cluster2
      ports:
        http: 8001
    - address: 10.20.0.2
      network: cluster2
      ports:
        http: 8001
    - address: 10.20.0.3
      network: cluster2
      ports:
        http: 8001
