manifests/multi-cluster/cluster1/virtualservices.yml
# Existing VirtualService deployed from routes. It should be attached to
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: site
  namespace: service-a
spec:
  gateways:
    - istio-system/internal-ingress
    - istio-system/external-ingress
    - mesh
  hosts:
    - www.example.com
  http:
    - route:
        - destination:
            host: service-a.service-a.svc.cluster.local
---
# Generated VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a
  namespace: service-a
spec:
  gateways:
    - istio-system/internal-ingress
    - smart/clever-ingress-gateway
  hosts:
    - service-a.service-a
  http:
    - route:
        - destination:
            host: service-a.service-a.svc.cluster.local
---
# Generated VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b
  namespace: service-b
spec:
  gateways:
    - istio-system/internal-ingress
    - smart/clever-ingress-gateway
  hosts:
    - service-b.service-b
  http:
    - route:
        - destination:
            host: service-b.service-b.svc.cluster.local
